<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="game_lable">Игра</string>
    <string name="game_die_nativ">Словарь пуст</string>
    <string name="game_die_english">Dictionary is empty</string>
    <string name="game_rating">Рейтинг</string>
    <string name="i_know">Знаю</string>
    <string name="i_dont_know">Не знаю</string>
    <string name="isTrue">Верно</string>
    <string name="isFalse">Ошибся</string>
    <string name="next">Продолжить</string>
 
    <string name="adddict_title">Hовый словарь</string>
    <string name="adddict_lable">Введите имя нового словаря:</string>
    <string name="adddict_emptyString">Вы ничего не ввели</string>
    <string name="adddict_inBase">Словарь с таким именем уже существует</string>
    <string name="adddict_added">Словарь успешно добавлен</string>
    <string name="adddict_create">Создать</string>
    <string name="adddict_cancel">Отмена</string>

    <string name="item_wordslist_text_change">Изменить</string>
    <string name="item_wordslist_text_copy">Копировать</string>
    <string name="item_wordslist_text_insert">Переместить</string>
    <string name="item_wordslist_text_delete">Удалить</string>
    <string name="item_wordslist_text_cancel">Отмена</string>
    
    <string name="wordslist_deleted">Слово успешно удалено</string>
    <string name="wordslist_copied">Слово успешно скопировано</string>
    <string name="wordslist_moved">Слово успешно перемещено</string>
    
    <string name="editword_title">Редактор слова</string>
    <string name="editword_text_nativ">На родном языке:</string>
    <string name="editword_text_foreign">На иностранном языке:</string>
    <string name="editword_text_cancel">Отмена</string>
    <string name="editword_text_change">Изменить</string>
    <string name="editword_text_changed">Слово успешно изменено</string>
    <string name="editword_text_empty">Вы ничего не ввели</string>
    
    <string name="dictslist_title">Выбирите словарь</string>
    <string name="dictslist_text_cancel">Отмена</string>
    
    <string name="app_name">LangOmich</string>
    <string name="test">Test</string>
    <string name="addWords">add Word</string>
    <string name="Dictionary">Dictionary</string>
    <string name="settigs">Настройки</string>
    <string name="language_label">Словарь:</string>
    <string name="words_number">Количество слов в тесте:</string>
    <string name="login_label">Логин:</string>
    <string name="input_login">Введите логин</string>
    <string name="password_label">Пароль:</string>
    <string name="input_password">Введите пароль</string>
    <string name="look">показать</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dictionary_label">Словарь</string>
    <string name="edit_word_label">Edit</string>
    <string name="rating_label">Рейтинг:</string>
    <string name="original_label">Оригинал</string>
    <string name="translate_label">Перевод</string>
    
    
    <string name="editW_label">Редактор записи:</string>
    <string name="editW_nothing_change">Ничего небыло изменено</string>
    <string name="editW_save">Сохранить</string>
    <string name="editW_cancel">Отмена</string>
    
    
    <string name="createL_label">Новый словарь</string>
    <string name="createL_enter_name">Введите язык словаря:</string>
    <string name="createL_empty_string">Вы ввели пустую строку</string>
    <string name="createL_in_base">Словарь с таким языком уже есть</string>
    <string name="createL_create">Создать</string>
    <string name="createL_cancel">Отмена</string>
    
    <string name="createW_label">Добавить новое слово</string>
   	<string name="createW_added_ok">Слово успешно добавлено</string>
    <string name="createW_create">Создать</string>
  	<string name="createW_cancel">Отмена</string>
  	  
    <string name="original">Оригинал:</string>
    <string name="translation">Перевод:</string>
    <string name="rating">Рейтинг:</string> 
    <string name="error_empty_original">Поле оригинал пустое</string>
    <string name="error_empty_translation">Поле перевод пустое</string>
    <string name="error_in_base">Такое слово есть в словаре</string>
    
</resources>
