<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/startTest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test" />

        <Button
            android:id="@+id/addWord"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/addWords"/>

        <Button
            android:id="@+id/startDictionary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Dictionary" />
    </LinearLayout>

</RelativeLayout>