<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editword_text_nativ" />

        <EditText
            android:id="@+id/editword_edit_nativ"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editword_text_foreign" />     
               
        <EditText
            android:id="@+id/editword_edit_foreign"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />        

        <TextView
            android:id="@+id/editword_errorReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
       
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editword_text_cancel" 
                android:onClick="onCancelButton"/>
            
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:text="@string/editword_text_change"
                android:onClick="onChangeButton"/>
            
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>