<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dip">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/createWf_tView_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original" />

            <EditText
                android:id="@+id/createWf_tEdit_original"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/createWf_tView_translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translation" />

            <EditText
                android:id="@+id/createWf_tEdit_translation"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/createWf_tView_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating" />

            <Spinner
                android:id="@+id/createWf_spinner_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

 </TableLayout>
<TextView
        android:id="@+id/createWf_tView_error_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/createWf_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createW_cancel" />

        <Button
            android:id="@+id/createWf_button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createW_create" />
    </LinearLayout>

    

</LinearLayout>