<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/language_label"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/language_label" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="" />

        <ImageButton
            android:id="@+id/select_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_star" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/number_label"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/words_number" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="" />

        <ImageButton
            android:id="@+id/number_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_star" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/login_label"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/login_label" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="2112" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/password_label" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="" />

    </LinearLayout>

</LinearLayout>