<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
		 <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/createW_spinner_selectLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/createW_ibutton_createLanguage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_add" />

         </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/createW_tView_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original" />

            <EditText
                android:id="@+id/createW_tEdit_original"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/createW_tView_translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translation" />

            <EditText
                android:id="@+id/createW_tEdit_translation"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/createW_tView_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating" />

            <Spinner
                android:id="@+id/createW_spinner_selectRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>
       
    </TableLayout>

     <TextView
        android:id="@+id/createW_tView_errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/createW_button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createW_create" />

    </LinearLayout>

</LinearLayout>